<resources>
    <string name="app_name">WeTo</string>
    <string name="kakao_app_key">1924ea890a9d3dc1786add9ec27cb511</string>
    <string name="kakaolink_host">kakaolink</string>
    <string name="kakao_scheme">kakao1924ea890a9d3dc1786add9ec27cb511</string>
    <string name="kakao_login">카카오톡 로그인하기</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="insert_todo_error">일정 추가 실패</string>
    <string name="add_todo_title">새로운 할 일</string>
    <string name="add_todo_name_hint">새로운 할 일을 입력하세요.</string>
    <string name="todo_time">특정 시각에 알리기</string>
    <string name="todo_gps">특정 위치에서 알리기</string>
    <string name="todo_time_date">날짜를 선택하세요.</string>
    <string name="todo_time_time">시간을 선택하세요.</string>
    <string name="todo_gps_noti_time">알림 받을 시간대를 설정하세요.</string>
    <string name="todo_important">중요한 일정으로 설정하기</string>
    <string name="todo_memo">메모</string>
    <string name="loading">로딩중입니다.</string>
    <string name="dialog_group_title">그룹 기능을\n사용하기 위해 로그인 해주세요.</string>
    <string name="dialog_group_subtitle">별도의 회원가입 과정 없이\n카카오톡 연동 로그인을 하실 수 있습니다.</string>
    <string name="wifi_search_title">근처에서 연결되는 Wi-fi를 이용\n하여 더욱 정확한 위치 등록하기</string>
    <string name="favorite_place_other_title">자주가는 장소로 등록할 곳을 선택해주세요.</string>
    <string name="favorite_place_home_title">집으로 등록할 장소를 선택해주세요.</string>
    <string name="favorite_place_company_title">회사로 등록할 장소를 선택\n해주세요.</string>
    <string name="favorite_place_school_title">학교로 등록할 장소를 선택\n해주세요.</string>
    <string name="cant_geofence">"완료 할 수 없습니다.\n위치서비스를 활성화 해 주세요"</string>
    <string name="cant_geofence_when_splash">"위치서비스를 활성하지 않으면\n위치알림을 받을 수 없습니다"</string>

    <string name="group_invite_title">그룹에 초대하기</string>
    <string name="group_invite_button">카카오톡 친구 초대하기</string>
    <string name="modify">수정하기</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_select_search">장소, 주소 검색</string>
    <string name="activity_todo_add_always">항상</string>
    <string name="activity_todo_add_morning">6~12시</string>
    <string name="activity_todo_add_evening">12시~21시</string>
    <string name="activity_todo_add_night">21시~06시</string>

    <string name="dialog_group_todo_add_title">새로 만들기</string>
    <string name="dialog_group_todo_add_todo">할 일 추가하기</string>
    <string name="dialog_group_todo_add_promise">약속 추가하기</string>

    <string name="todo_group_add_member">해당 멤버 선택하기</string>

    <string name="todo_icon_select">아이콘 선택</string>
    <string name="select">선택하기</string>


    <string name="group_invite_deny">거절하기</string>
    <string name="group_invite_deny_title">정말 거절하시겠습니까?</string>
    <string name="todo_detail_category_time">특정 시각에 알리기</string>
    <string name="todo_detail_category_gps">특정 위치에서 알리기</string>


    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>

    <!-- Transition type strings -->
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>

    <string name="geofence_transition_notification_text">
        Click notification to return to app
    </string>

    <string name="group_invite_content_login">초대 받으신 그룹에 참여하기 위해\n카카오톡 연동 로그인을 하시길 바랍니다.</string>
    <string name="group_invite_content_invite">초대 받으신 그룹에 참여하기 위해\n‘그룹에 참여하기’로 계속하여 주세요.</string>
    <string name="group_invite_button_invite">그룹에 참여하기</string>

    <string name="notification_title_meet_1">약속시간</string>
    <string name="notification_title_meet_2">시간 전 입니다!</string>

</resources>
